Fix internal alumni full-width alignment issues by putting it outside genericPage completely.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -274,12 +274,6 @@ button:focus {
   /* -webkit-box-shadow: 0 17px 27px -5px rgba(50,50,93,.25), 0 8px 16px -8px rgba(0,0,0,.3), 0 -6px 16px -6px rgba(0,0,0,.025); */
   /* box-shadow: 0 13px 27px -5px rgba(50,50,93,.25), 0 8px 16px -8px rgba(0,0,0,.3), 0 -6px 16px -6px rgba(0,0,0,.025); */
 }
-.full-width-insert {
-  width: 100%;
-  width: 100vw;
-  margin-left: calc(-100vw / 2 + 1000px / 2);
-  margin-right: calc(-100vw / 2 + 1000px / 2);
-}
 
 .boxInfo {
   /* border-radius: 5px; */
